Home Page Modified

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 font-family: 'Raleway', sans-serif;">
                 Inventory Management
               </a>
+	<!-- File Changed After Commit. Below are the Changes -->
             </div>
         </nav>
         
